# subtypes

./: .gitignore  README.md  compdata.cabal  package.yaml  stack.yaml
src/Data/: Subtypes.hs
src/Data/Comp/: Ops.hs  SubsumeCommon.hs
src/Data/Subtypes/: Internal.hs  Parametric.hs
subtypes-core/: package.yaml
subtypes-core/src/Data/: Subtypes.hs
subtypes-core/src/Data/Subtypes/: Internal.hs
subtypes-core/test/: Spec.hs
subtypes-lens/: package.yaml
subtypes-lens/src/Data/Subtypes/: Lens.hs
test/: Spec.hs
